<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:text="@string/repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textStyle="bold"
            android:id="@+id/repoName_tv" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/repo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repoDescription_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repoName_tv" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/avatar_iv"
            app:layout_constraintTop_toBottomOf="@+id/repoDescription_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/repoOwner_tv" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:contentDescription="@string/avatar_ct"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/repo_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repoOwner_tv" app:layout_constraintStart_toEndOf="@+id/avatar_iv"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/avatar_iv" app:layout_constraintBottom_toBottomOf="@+id/avatar_iv"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_star_black_24dp"
            android:id="@+id/star_iv"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_iv" app:layout_constraintTop_toTopOf="@+id/avatar_iv"
            app:layout_constraintEnd_toStartOf="@+id/repoStars_tv" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/repoOwner_tv" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:contentDescription="@string/stars_ct"/>
    <TextView
            android:text="@string/repo_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repoStars_tv"
            app:layout_constraintTop_toTopOf="@+id/avatar_iv" app:layout_constraintBottom_toBottomOf="@+id/avatar_iv"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>